--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
             <div>
                 <div class="hidden md:flex space-x-6 space-x-reverse text-base">
                     <a href="#hero" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">خانه</a>
-                    <a href="#about" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">درباره من</a>
+                    <a href="#about" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">درباره‌من</a>
                     <a href="#writings" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">نوشته‌ها</a>
                     <a href="#portfolio" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">نمونه‌کارها</a>
                     <a href="#full-resume" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">رزومه</a>
-                    <a href="#socials" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">صفحات مجازی</a>
+                    <a href="#socials" class="nav-link hover:text-[#A2D5C6] transition-colors duration-300">صفحات‌مجازی</a>
                 </div>
                 <button id="mobile-menu-button" class="md:hidden text-white focus:outline-none">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
@@ -91,11 +91,11 @@
         </nav>
         <div id="mobile-menu" class="hidden md:hidden bg-[#111111]">
             <a href="#hero" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">خانه</a>
-            <a href="#about" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">درباره من</a>
+            <a href="#about" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">درباره‌من</a>
             <a href="#writings" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">نوشته‌ها</a>
             <a href="#portfolio" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">نمونه‌کارها</a>
             <a href="#full-resume" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">رزومه</a>
-            <a href="#socials" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">صفحات مجازی</a>
+            <a href="#socials" class="block text-center py-2 px-4 text-base hover:bg-[#000000]">صفحات‌مجازی</a>
         </div>
     </header>
 
@@ -113,10 +113,10 @@
         <!-- About Section -->
         <section id="about" class="py-20 bg-[#111111]">
             <div class="container mx-auto px-6">
-                <h2 class="text-2xl font-bold text-center text-white mb-12">درباره من</h2>
+                <h2 class="text-2xl font-bold text-center text-white mb-12">درباره‌من</h2>
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/3 text-center">
-                        <img src="https://i.ibb.co/yF2yj2xm/IMG-20250330-141458-602.jpg" alt="عکس پروفایل امین‌رضا ترکی" width="256" height="256" loading="lazy" class="rounded-full w-64 h-64 mx-auto shadow-lg border-4 border-[#A2D5C6]/50 object-cover">
+                        <img src="https://i.ibb.co/yF2yj2xm/IMG-20250330-141458-602.jpg" alt="عکس پروفایل" width="256" height="256" loading="lazy" class="rounded-full w-64 h-64 mx-auto shadow-lg border-4 border-[#A2D5C6]/50 object-cover">
                     </div>
                     <div class="md:w-2/3 text-center md:text-right text-base">
                         <p class="mb-4 text-[#F6F6F6]/90">امین‌رضا ترکی هستم.</p>
@@ -202,7 +202,7 @@
                 <h2 class="text-2xl font-bold text-center text-white mb-12">رزومه</h2>
                 <div class="bg-[#111111] p-8 rounded-xl shadow-lg max-w-4xl mx-auto text-base">
                     <div class="space-y-8">
-                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">هنر و طراحی</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
+                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">هنرهای تجسمی</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
                             <li>تسلط نیمه‌حرفه‌ای بر نرم‌افزارهای Marmoset Hexels, Adobe Photoshop</li>
                             <li>تسلط مقدماتی بر نرم‌افزارهای Figma, Adobe XD, Adobe Illustrator</li>
                             <li>تسلط نیمه‌حرفه‌ای بر طراحی تایپوگرافی، لوگوتایپ و پوستر</li>
@@ -215,7 +215,7 @@
                             <li>تجربه طراحی در نماهنگ تلوزیونی "کاکوی امام رضا (ع)"</li>
                             <li>توانمندی تولید تصاویر هنری و رئال با استفاده از مدل‌های هوش‌مصنوعی</li>
                         </ul></div>
-                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">ویدئو</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
+                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">تدوین</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
                             <li>تسلط نیمه‌حرفه‌ای بر نرم‌افزار Adobe Premiere و دیگر نرم‌افزارهای تدوین ویدئو</li>
                             <li>تدوین نماهنگ تلوزیونی "واژگونی"</li>
                             <li>تولید کلیپ‌های متعدد جهت حوزه هنری، مجتمع شاکرین و غیره</li>
@@ -236,7 +236,7 @@
                             <li>توانمندی تولید ویدئو با استفاده از مدل‌های هوش‌مصنوعی</li>
                             <li>کسب رتبه سوم مسابقه عکاسی ناحیه</li>
                         </ul></div>
-                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">برنامه‌نویسی و تکنولوژی</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
+                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">کدنویسی</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
                             <li>تسلط نیمه‌حرفه‌ای بر زبان Python</li>
                             <li>تسلط مقدماتی بر زبان‌های HTML, CSS, PHP, Javascript و غیره</li>
                             <li>مطالعات مقدماتی در حوزه شبکه</li>
@@ -248,12 +248,12 @@
                             <li>توانمندی برنامه‌نویسی اپلیکیشن، سایت و غیره با استفاده از مدل‌های هوش‌مصنوعی</li>
                             <li>کسب مقام چهارم کشوری و تنها گروه برگزیده جنوب کشور در مسابقه دانش‌آموزی بازی‌سازی کیبورد، آکادمی همراه‌اول</li>
                         </ul></div>
-                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">مطالعات میان‌رشته‌ای و توسعه فردی</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
-                            <li>مطالعه در زمینه‌های روانشناسی، فلسفه و جامعه‌شناسی جهت درک عمیق‌تر رفتار انسان و کاربر</li>
+                        <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">مطالعات آزاد</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
+                            <li>مطالعه ابتدایی در زمینه‌های روانشناسی، فلسفه، جامعه‌شناسی و...</li>
                             <li>تسلط بر اصول و تکنیک‌های تولید محتوا در رسانه‌های دیجیتال</li>
                             <li>تحقیق و نوشتن تحلیل در حوزه‌های مفهومی مانند هوش‌مصنوعی و ماهیت زمان</li>
-                            <li>تجربه در نویسندگی خلاق و شعر</li>
-                            <li>علاقه‌مند به مطالعه در حوزه‌های علمی مانند کیهان‌شناسی، ژنتیک و رباتیک</li>
+                            <li>تجربیات ابتدایی در نویسندگی و شعر</li>
+                            <li>علاقه‌مند به مطالعه در حوزه‌های علمی مانند کیهان‌شناسی، ژنتیک، رباتیک و...</li>
                         </ul></div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
         <!-- Socials Section -->
         <section id="socials" class="py-20 bg-[#111111]">
             <div class="container mx-auto px-6 text-center">
-                <h2 class="text-2xl font-bold text-white mb-12">صفحات مجازی</h2>
+                <h2 class="text-2xl font-bold text-white mb-12">صفحات‌مجازی</h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-8 text-lg">
                     <a href="https://Instagram.com/artorki_creative" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">اینستاگرام</a>
                     <a href="https://Pinterest.com/artorki_creative" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">پینترست</a>
