--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                             <li>تسلط مقدماتی بر زبان‌های HTML, CSS, PHP, Javascript و غیره</li>
                             <li>مطالعات مقدماتی در حوزه شبکه</li>
                             <li>مطالعات و تمرینات مقدماتی در حوزه تست‌نفوذ تلفن‌های هوشمند</li>
-                            <li>ساخت بدافزارهای مختلف برای سیستم‌های Windows و Unix بدون تشخیص آنتی‌ویروس‌ها</li>
-                            <li>تجربه تست‌نفوذ و استخراج داده در سایت‌های آزمایشگاهی و آموزشی</li>
-                            <li>درحال پیاده‌سازی یک سیستم زمانی مشابه انسان برای کامپیوترها، که می‌تواند منجر به درک برخی احساسات (مانند بی‌حوصلگی، عجله و غیره)، تصمیم‌گیری و اولویت‌بندی در انجام کارها، و بهینه‌تر شدن پردازش‌ها شود</li>
+                            <li>تجربه ساخت بدافزارهای مختلف (مثل شل‌معکوس، باج‌افزار، کی‌لاگر و غیره) برای سیستم‌های Windows و Unix بدون تشخیص آنتی‌ویروس‌ها</li>
+                            <li>تجربه استخراج داده، تست‌نفوذ و حملات (مثل داس، دیکشنری، بروت‌بروت‌فورس و غیره) در سایت‌های آزمایشگاهی و آموزشی</li>
+                            <li>درحال ساخت یک سیستم زمانی مشابه انسان برای کامپیوترها، که می‌تواند منجر به درک برخی احساسات (مانند بی‌حوصلگی، عجله و غیره)، تصمیم‌گیری و اولویت‌بندی در انجام کارها، و بهینه‌تر شدن پردازش‌ها شود</li>
                             <li>نوشتن تحلیل‌های مختلف درباره هوش‌مصنوعی</li>
                             <li>توانمندی برنامه‌نویسی اپلیکیشن، سایت و غیره با استفاده از مدل‌های هوش‌مصنوعی</li>
                             <li>کسب مقام چهارم کشوری و تنها گروه برگزیده جنوب کشور در مسابقه دانش‌آموزی بازی‌سازی کیبورد، آکادمی همراه‌اول</li>
