--- a/index.html
+++ b/index.html
@@ -235,18 +235,18 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
                     <!-- Writing Card 1 -->
                     <div class="writing-card bg-[#111111] p-6 rounded-xl flex flex-col text-center border border-white/10">
-                        <h3 class="text-lg font-bold text-white mb-4 flex-grow">هوش مصنوعی: مدل‌ها، چالش‌ها و آینده</h3>
-                        <a href="https://vrgl.ir/HA8Dy" target="_blank" class="mt-auto bg-[#A2D5C6] hover:bg-[#8bb8ac] text-[#000000] font-semibold py-2 px-4 rounded-full transition-colors duration-300">مطالعه در ویرگول</a>
-                    </div>
-                    <!-- Writing Card 2 -->
-                    <div class="writing-card bg-[#111111] p-6 rounded-xl flex flex-col text-center border border-white/10">
                         <h3 class="text-lg font-bold text-white mb-4 flex-grow">هوش‌مصنوعی: مهندسی ناخودآگاه</h3>
                         <a href="https://vrgl.ir/s9jtX" target="_blank" class="mt-auto bg-[#A2D5C6] hover:bg-[#8bb8ac] text-[#000000] font-semibold py-2 px-4 rounded-full transition-colors duration-300">مطالعه در ویرگول</a>
                     </div>
-                    <!-- Writing Card 3 -->
+                    <!-- Writing Card 2 -->
                     <div class="writing-card bg-[#111111] p-6 rounded-xl flex flex-col text-center border border-white/10">
                         <h3 class="text-lg font-bold text-white mb-4 flex-grow">هوش‌مصنوعی، در دستان نابینا!</h3>
                         <a href="https://vrgl.ir/J4eiT" target="_blank" class="mt-auto bg-[#A2D5C6] hover:bg-[#8bb8ac] text-[#000000] font-semibold py-2 px-4 rounded-full transition-colors duration-300">مطالعه در ویرگول</a>
+                    </div>
+                    <!-- Writing Card 3 -->
+                    <div class="writing-card bg-[#111111] p-6 rounded-xl flex flex-col text-center border border-white/10">
+                        <h3 class="text-lg font-bold text-white mb-4 flex-grow">هوش‌مصنوعی: سونامی</h3>
+                        <a href="https://vrgl.ir/kO4iU" target="_blank" class="mt-auto bg-[#A2D5C6] hover:bg-[#8bb8ac] text-[#000000] font-semibold py-2 px-4 rounded-full transition-colors duration-300">مطالعه در ویرگول</a>
                     </div>
                 </div>
             </div>
@@ -257,22 +257,31 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-2xl font-bold text-center text-white mb-16">نمونه‌کارها</h2>
                 <div class="columns-3 md:columns-4 gap-4 md:gap-8">
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/chRBY74R/IMG-20231022-104807-848.jpg" alt="نمونه کار ۱" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/TDVZL94Q/Tashdid-Profile-White.jpg" alt="نمونه کار ۲" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/TDzDPDqH/IMG-20240429-233959-003.jpg" alt="نمونه کار ۳" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/6J0dK5f9/Havel-Halena.jpg" alt="نمونه کار ۴" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/gLzzYDZ4/Bahar1.jpg" alt="نمونه کار ۵" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/SwW0hV7n/Gaza2.jpg" alt="نمونه کار ۶" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/Z6GnP1nB/Hekmat1.jpg" alt="نمونه کار ۷" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/nNFkFvxz/SH2.jpg" alt="نمونه کار ۸" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/nsBgz5MK/FP-4.jpg" alt="نمونه کار ۹" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/jk7WLVZY/Olympics-Doll.jpg" alt="نمونه کار ۱۰" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/HD4PQqSL/Imam1.jpg" alt="نمونه کار ۱۱" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/8n01Wkfw/Untitled-11.jpg" alt="نمونه کار ۱۲" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/gbXNnmMt/Wave-Maker1.jpg" alt="نمونه کار ۱۳" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/fdJfNvdN/IMG-20250713-125830-351.jpg" alt="نمونه کار ۱۴" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/WWX5kMY8/IMG-20250406-231518-334.jpg" alt="نمونه کار ۱۵" class="rounded-xl"></div>
-                    <div class="masonry-item mb-4 md:mb-8"><img src="https://i.ibb.co/5dvGqwQ/Untitled-33331.jpg" alt="نمونه کار ۱۶" class="rounded-xl"></div>
+                              <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/mw162Ch"><img src="https://i.ibb.co/kfkQwgq/1.jpg" alt="1" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/jZQWzRsW"><img src="https://i.ibb.co/R4sBNydB/2.jpg" alt="2" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/hw67J1V"><img src="https://i.ibb.co/ntGgN8j/3.jpg" alt="3" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/mV702L5y"><img src="https://i.ibb.co/0R3K6gy9/4.jpg" alt="4" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/67z4wF94"><img src="https://i.ibb.co/yct8Pqv8/5.jpg" alt="5" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/v4XfQM8Y"><img src="https://i.ibb.co/d4mXLHyg/6.jpg" alt="6" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/R4ygfDrJ"><img src="https://i.ibb.co/x8H2W79r/7.jpg" alt="7" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/cKC5k3kR"><img src="https://i.ibb.co/6c1hrwrG/8.jpg" alt="8" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/v4h3g1Mw"><img src="https://i.ibb.co/8gbrTMQK/9.jpg" alt="9" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/FL7q3YLN"><img src="https://i.ibb.co/gLgF9WLH/10.jpg" alt="10" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/Xx7L85qq"><img src="https://i.ibb.co/7tnC4pqq/11.jpg" alt="11" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/My7ZdphJ"><img src="https://i.ibb.co/bjXQtL3G/12.jpg" alt="12" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/YBZgf4Wr"><img src="https://i.ibb.co/xqHZzKs4/13.jpg" alt="13" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/Qv35CCmV"><img src="https://i.ibb.co/s9dB6634/14.jpg" alt="14" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/d4P19z4x"><img src="https://i.ibb.co/zVXjc0VD/15.jpg" alt="15" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/CKYj5xmL"><img src="https://i.ibb.co/0y60jPm5/16.jpg" alt="16" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/ymm6Xf6z"><img src="https://i.ibb.co/4ww87m8b/17.jpg" alt="17" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/84XC4CXh"><img src="https://i.ibb.co/PztLzLtS/18.jpg" alt="18" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/gM8pTJzt"><img src="https://i.ibb.co/BVJxZBqT/19.jpg" alt="19" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/7dtQm03p"><img src="https://i.ibb.co/DHfY2jBM/20.jpg" alt="20" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/Y7hG1bTx"><img src="https://i.ibb.co/27dBC5YT/21.jpg" alt="21" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/Pyz2FZH"><img src="https://i.ibb.co/rhfBFGr/22.jpg" alt="22" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/SDqqc2Qs"><img src="https://i.ibb.co/TDzz1ZKv/23.jpg" alt="23" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/TqPrZT5R"><img src="https://i.ibb.co/84PXJBV2/24.jpg" alt="24" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/ZRDzqg20"><img src="https://i.ibb.co/JWJjDp39/25.jpg" alt="25" class="rounded-xl"></a></div>
                 </div>
             </div>
         </section>
