--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
 
             <!-- Left Side: Brand Name -->
-            <a href="#hero" class="text-2xl font-bold text-white">artorki_creative</a>
+            <a href="#hero" class="text-2xl font-bold text-white">artorki</a>
         </nav>
         <!-- Mobile Dropdown Menu -->
         <div id="mobile-menu" class="hidden md:hidden bg-[#111111]/90 backdrop-blur-md">
