--- a/index.html
+++ b/index.html
@@ -201,11 +201,10 @@
                         </ul></div>
                         <div><h3 class="text-lg font-bold text-[#A2D5C6] mb-4 border-b border-[#A2D5C6]/20 pb-2">کدنویسی</h3><ul class="list-disc list-inside space-y-2 text-[#F6F6F6]/90">
                             <li>تسلط نیمه‌حرفه‌ای بر زبان Python</li>
-                            <li>تسلط مقدماتی بر زبان‌های HTML, CSS, PHP, Javascript و غیره</li>
+                            <li>تسلط مقدماتی بر زبان‌های HTML, CSS, PHP, Javascript, C++</li>
                             <li>تسلط متوسط بر Django</li>
                             <li>تسلط متوسط بر DataBase</li>
                             <li>مطالعات مقدماتی در حوزه شبکه</li>
-                            <li>تسلط متوسط بر DataBase</li>
                             <li>مطالعات و تمرینات مقدماتی در حوزه تست‌نفوذ تلفن‌های هوشمند</li>
                             <li>تجربه ساخت بدافزارهای مختلف (مانند شل‌معکوس، باج‌افزار، کی‌لاگر و غیره) برای سیستم‌های Windows و Unix بدون تشخیص آنتی‌ویروس‌ها</li>
                             <li>تجربه استخراج داده، تست‌نفوذ و حملات (مثل داس، دیکشنری، بروت‌بروت‌فورس و غیره) در سایت‌های آزمایشگاهی و آموزشی</li>
@@ -293,12 +292,14 @@
             <div class="container mx-auto px-6 text-center">
                 <h2 class="text-2xl font-bold text-white mb-12">صفحات‌مجازی</h2>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-8 text-lg">
+                    <a href="https://www.linkedin.com/in/artorkicreative" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">لینکدین</a>
                     <a href="https://Instagram.com/artorki_creative" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">اینستاگرام</a>
                     <a href="https://Pinterest.com/artorki_creative" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">پینترست</a>
                     <a href="https://Behance.net/artorkii" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">بیهنس</a>
                     <a href="https://Github.com/artorki" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">گیت‌هاب</a>
                     <a href="https://Medium.com/@artorki_self" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">مدیوم</a>
                     <a href="https://Virgool.io/@artorkiiii" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">ویرگول</a>
+                    <a href="https://T.me/artorki_daily" target="_blank" class="font-semibold text-[#A2D5C6] hover:text-[#F6F6F6] transition-colors duration-300">تلگرام</a>
                 </div>
             </div>
         </section>
@@ -308,7 +309,7 @@
     <footer id="contact" class="bg-[#000000] border-t border-[#111111]">
         <div class="container mx-auto px-6 py-12 text-center text-base">
             <p class="mb-8 text-[#F6F6F6]/80">آماده همکاری در پروژه‌های خلاقانه و چالش‌برانگیز هستم.</p>
-            <p class="text-[#F6F6F6]/50 mt-12">&copy; 2025 - artorki_creative. تمام حقوق محفوظ است.</p>
+            <p class="text-[#F6F6F6]/50 mt-12">&copy; 2025 - artorki. تمام حقوق محفوظ است.</p>
         </div>
     </footer>
 
