--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>پورتفولیو | artorki</title>
+    <title>پورتفولیو | امین‌رضا ترکی</title>
     
     <!-- Preload the background image for faster loading -->
     <link rel="preload" as="image" href="https://i.ibb.co/kgFhBL4V/gradient-background-web-optimized.jpg">
@@ -128,8 +128,11 @@
             <div class="absolute inset-0 bg-black/50"></div>
             <div class="container mx-auto px-6 text-center relative z-10 flex flex-col items-center">
                 <h1 class="text-4xl font-bold text-[#CFFFE2] mb-12 leading-tight">
-                    درحال یادگیری، ایده‌پردازی، و ترسیم تراوشات ذهنی...!
+                    پورتفولیو شخصی امین‌رضا ترکی
                 </h1>
+                <h2>
+                    درحال یادگیری، ایده‌پردازی، و ترسیم تراوشات ذهنی...!
+                </h2>
                 
                 <!-- Hero Navigation Buttons -->
                 <nav id="hero-nav" class="flex flex-wrap justify-center gap-3 md:gap-4">
@@ -257,7 +260,7 @@
                 <h2 class="text-2xl font-bold text-center text-white mb-16">نمونه‌کارها</h2>
                 <div class="columns-3 md:columns-4 gap-4 md:gap-8">
                               <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/mw162Ch"><img src="https://i.ibb.co/kfkQwgq/1.jpg" alt="1" class="rounded-xl"></a></div>
-                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/pr0MC3N8"><img src="https://i.ibb.co/9381RqBL/Mother-1.jpg" alt="2" class="rounded-xl"></a></div>
+                             <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/pr0MC3N8"><img src="https://i.ibb.co/9381RqBL/Mother-1.jpg" alt="تصویرسازی روز مادر امین‌رضا ترکی" class="rounded-xl"></a></div>
                              <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/qMR4vC8F"><img src="https://i.ibb.co/Z6hw0Sr1/Mr-Moini2.jpg" alt="3" class="rounded-xl"></a></div>
                              <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/jZQWzRsW"><img src="https://i.ibb.co/R4sBNydB/2.jpg" alt="4" class="rounded-xl"></a></div>
                              <div class="masonry-item mb-4 md:mb-8"><a href="https://ibb.co/hw67J1V"><img src="https://i.ibb.co/ntGgN8j/3.jpg" alt="5" class="rounded-xl"></a></div>
